[gd_scene load_steps=11 format=2]

[ext_resource path="res://Themes/thol_launcher_theme_1.tres" type="Theme" id=1]
[ext_resource path="res://Button Group/buttongroup_dropdown.tres" type="ButtonGroup" id=2]
[ext_resource path="res://Scripts/dropdown_entry.gd" type="Script" id=3]
[ext_resource path="res://Themes/DropdownEntry/dropdown_entry.tres" type="StyleBox" id=4]
[ext_resource path="res://Icons/GuiRadioUnchecked.png" type="Texture" id=6]
[ext_resource path="res://Themes/DropdownEntry/dropdown_entry_focus.tres" type="StyleBox" id=7]
[ext_resource path="res://Themes/DropdownEntry/dropdown_entry_pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://Icons/item_remove_hover_us.png" type="Texture" id=9]
[ext_resource path="res://Icons/item_remove_pressed_us.png" type="Texture" id=10]
[ext_resource path="res://Icons/item_remove_trans.png" type="Texture" id=11]

[node name="entry" type="HBoxContainer" groups=[
"dropdown_entry",
]]
anchor_right = 1.0
margin_bottom = 27.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="entry_selection" type="Button" parent="." groups=[
"ButtonGroup_1",
]]
margin_right = 626.0
margin_bottom = 27.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_colors/font_color_pressed = Color( 0.0862745, 0.0941176, 0.109804, 1 )
group = ExtResource( 2 )
text = "Seed (Note)"
icon = ExtResource( 6 )
clip_text = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 626.0
margin_right = 650.0
margin_bottom = 27.0
rect_min_size = Vector2( 24, 0 )

[node name="entry_removal" type="TextureButton" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 27, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 10 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="entry_selection" to="." method="_on_entry_selection_mouse_entered"]
[connection signal="mouse_exited" from="entry_selection" to="." method="_on_entry_selection_mouse_exited"]
[connection signal="pressed" from="entry_selection" to="." method="_on_entry_selection_pressed"]
[connection signal="pressed" from="Control/entry_removal" to="." method="_on_TextureButton_pressed"]
